Improve Argeo Office (mostly ids)

--- a/org.argeo.suite.e4/build.properties
+++ b/org.argeo.suite.e4/build.properties
@@ -1,6 +1,6 @@
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
-               e4xmi/argeo-office.e4xmi,\
-               OSGI-INF/trackerE4Service.xml
+               OSGI-INF/,\
+               e4xmi/
 source.. = src/
