--- a/org.argeo.suite.e4/build.properties
+++ b/org.argeo.suite.e4/build.properties
@@ -2,5 +2,6 @@ output.. = bin/
 bin.includes = META-INF/,\
                .,\
                OSGI-INF/,\
-               e4xmi/
+               e4xmi/,\
+               plugin.xml
 source.. = src/
