Introduce standard Eclipse 4 fragments

--- a/org.argeo.suite.e4/build.properties
+++ b/org.argeo.suite.e4/build.properties
@@ -3,5 +3,6 @@ bin.includes = META-INF/,\
                .,\
                OSGI-INF/,\
                e4xmi/,\
-               plugin.xml
+               plugin.xml,\
+               e4xmi/argeo-suite-toolbars.e4xmi
 source.. = src/
