--- a/dep/pom.xml
+++ b/dep/pom.xml
@@ -39,6 +39,19 @@
 					</execution>
 				</executions>
 			</plugin>
+			<plugin>
+				<artifactId>maven-assembly-plugin</artifactId>
+				<dependencies>
+					<dependency>
+						<groupId>org.argeo.commons</groupId>
+						<artifactId>assembly-descriptors</artifactId>
+						<version>${version.argeo-commons}</version>
+					</dependency>
+				</dependencies>
+				<configuration>
+					<attach>false</attach>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 	<dependencies>
