--- a/org.argeo.suite.e4/build.properties
+++ b/org.argeo.suite.e4/build.properties
@@ -4,5 +4,6 @@ bin.includes = META-INF/,\
                OSGI-INF/,\
                e4xmi/,\
                plugin.xml,\
-               e4xmi/argeo-suite-toolbars.e4xmi
+               e4xmi/argeo-suite-toolbars.e4xmi,\
+               OSGI-INF/resourcesE4Service.xml
 source.. = src/
