--- a/sdk/argeo-office-e4-rap.properties
+++ b/sdk/argeo-office-e4-rap.properties
@@ -17,6 +17,8 @@ argeo.node.repo.type=h2
 org.osgi.service.http.port=7070
 #org.osgi.service.http.port.secure=7073
 
+#argeo.node.useradmin.uris=ldap://cn=Directory%20Manager:argeoargeo@localhost:10389/dc=example,dc=com
+
 # Logging
 log4j.configuration=file:../../log4j.properties
 
