--- a/sdk/log4j.properties
+++ b/sdk/log4j.properties
@@ -2,15 +2,7 @@
 log4j.rootLogger=WARN, development
 
 ## Levels
-log4j.logger.org.argeo.suite=DEBUG
-log4j.logger.org.argeo.connect=DEBUG
-log4j.logger.org.argeo.cms=DEBUG
-log4j.logger.org.argeo=INFO
-log4j.logger.org.argeo.cms.AbstractCmsEntryPoint=TRACE
-
-#log4j.logger.org.argeo.jackrabbit.remote.ExtendedDispatcherServlet=ERROR
-#log4j.logger.org.springframework.web.servlet.PageNotFound=ERROR
-#log4j.logger.org.argeo.server.webextender.TomcatDeployer=WARN
+log4j.logger.org.argeo=DEBUG
 
 ## Appenders
 # default appender
