Simplify started bundles

--- a/sdk/argeo-office-e4-rap.properties
+++ b/sdk/argeo-office-e4-rap.properties
@@ -6,10 +6,12 @@ org.eclipse.equinox.cm,\
 org.eclipse.rap.rwt.osgi
 
 argeo.osgi.start.3.node=\
-org.argeo.cms,\
+org.argeo.cms
+
+argeo.osgi.start.3.suite=\
 org.argeo.suite.cms
 
-argeo.osgi.start.5.node=\
+argeo.osgi.start.5.suite=\
 org.argeo.suite.e4.rap
 
 # Local
@@ -18,6 +20,9 @@ org.osgi.service.http.port=7070
 #org.osgi.service.http.port.secure=7073
 
 #argeo.node.useradmin.uris=ldap://cn=Directory%20Manager:argeoargeo@localhost:10389/dc=example,dc=com
+
+#argeo.i18n.locales=de,en,ar
+#argeo.i18n.defaultLocale=de
 
 # Logging
 log4j.configuration=file:../../log4j.properties
