--- a/sdk/argeo-office-e4-rap.properties
+++ b/sdk/argeo-office-e4-rap.properties
@@ -21,8 +21,8 @@ org.osgi.service.http.port=7070
 
 #argeo.node.useradmin.uris=ldap://cn=Directory%20Manager:argeoargeo@localhost:10389/dc=example,dc=com
 
-#argeo.i18n.locales=de,en,ar
-#argeo.i18n.defaultLocale=de
+argeo.i18n.locales=en,fr,de,ar
+argeo.i18n.defaultLocale=en
 
 # Logging
 log4j.configuration=file:../../log4j.properties
