Introduce RAP main shell addon

--- a/org.argeo.suite.e4.rap/build.properties
+++ b/org.argeo.suite.e4.rap/build.properties
@@ -4,5 +4,7 @@ bin.includes = META-INF/,\
                OSGI-INF/systemE4Service.xml,\
                OSGI-INF/activitiesE4Service.xml,\
                OSGI-INF/peopleE4Service.xml,\
-               OSGI-INF/documentsE4Service.xml
+               OSGI-INF/documentsE4Service.xml,\
+               e4xmi/argeo-suite-rap-addons.e4xmi,\
+               plugin.xml
 source.. = src/
