--- a/org.argeo.suite.web/pom.xml
+++ b/org.argeo.suite.web/pom.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.argeo.suite</groupId>
@@ -16,5 +18,14 @@
 			<artifactId>org.argeo.people.web</artifactId>
 			<version>${version.argeo-connect}</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.argeo.tp</groupId>
+			<artifactId>argeo-tp-rap-e4</artifactId>
+			<version>${version.argeo-tp}</version>
+			<type>pom</type>
+			<scope>provided</scope>
+		</dependency>
+
 	</dependencies>
 </project>
