Improve Javadoc generation

--- a/pom.xml
+++ b/pom.xml
@@ -155,7 +155,6 @@ which are used as well as that of the covered work.]]>
 	<reporting>
 		<plugins>
 			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-project-info-reports-plugin</artifactId>
 				<version>2.9</version>
 				<reportSets>
@@ -178,19 +177,13 @@ which are used as well as that of the covered work.]]>
 					<excludePackageNames>*.internal.*,org.eclipse.*</excludePackageNames>
 					<encoding>UTF-8</encoding>
 					<detectLinks>true</detectLinks>
-					<!-- <sourcepath>src</sourcepath> -->
 					<links>
-						<!-- Java -->
 						<link>http://docs.oracle.com/javase/8/docs/api</link>
-						<!-- OSGi -->
-						<link>http://www.osgi.org/javadoc/r5/core</link>
-						<link>http://www.osgi.org/javadoc/r5/enterprise</link>
-						<!-- Spring -->
+						<link>https://osgi.org/javadoc/r5/core</link>
+						<link>https://osgi.org/javadoc/r5/enterprise</link>
+						<link>https://docs.adobe.com/docs/en/spec/javax.jcr/javadocs/jcr-2.0</link>
+						<link>http://help.eclipse.org/oxygen/topic/org.eclipse.platform.doc.isv/reference/api</link>
 						<link>http://docs.spring.io/spring/docs/3.2.x/javadoc-api</link>
-						<!-- JCR -->
-						<link>http://www.day.com/maven/javax.jcr/javadocs/jcr-2.0</link>
-						<!-- Eclipse -->
-						<link>http://help.eclipse.org/neon/topic/org.eclipse.platform.doc.isv/reference/api</link>
 					</links>
 				</configuration>
 				<reportSets>
@@ -203,8 +196,7 @@ which are used as well as that of the covered work.]]>
 					</reportSet>
 					<reportSet>
 						<id>javadoc</id>
-						<reports>
-						</reports>
+						<reports></reports>
 					</reportSet>
 				</reportSets>
 			</plugin>
@@ -221,8 +213,7 @@ which are used as well as that of the covered work.]]>
 					</reportSet>
 					<reportSet>
 						<id>jxr</id>
-						<reports>
-						</reports>
+						<reports></reports>
 					</reportSet>
 				</reportSets>
 			</plugin>
