--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.argeo.commons</groupId>
 		<artifactId>argeo-commons</artifactId>
-		<version>2.1.74-SNAPSHOT</version>
+		<version>2.1.75</version>
 	</parent>
 	<groupId>org.argeo.suite</groupId>
 	<artifactId>argeo-suite</artifactId>
@@ -13,9 +13,8 @@
 	<description />
 	<version>0.1.13-SNAPSHOT</version>
 	<properties>
-		<version.argeo-suite>0.1.13-SNAPSHOT</version.argeo-suite>
-		<developmentCycle.argeo-suite>0.1</developmentCycle.argeo-suite>
-		<version.argeo-connect>2.1.79-SNAPSHOT</version.argeo-connect>
+		<version.argeo-suite>2.1.13</version.argeo-suite>
+		<version.argeo-connect>2.1.79</version.argeo-connect>
 		<version.argeo-tp-extras>2.1.10</version.argeo-tp-extras>
 		<git.rw />
 	</properties>
@@ -94,17 +93,6 @@ which are used as well as that of the covered work.]]>
 			</roles>
 		</developer>
 	</developers>
-<!-- 	<build> -->
-<!-- 		<plugins> -->
-<!-- 			<plugin> -->
-<!-- 				<artifactId>maven-javadoc-plugin</artifactId> -->
-<!-- 				<version>2.10.4</version> -->
-<!-- 				<configuration> -->
-<!-- 					<skip>true</skip> -->
-<!-- 				</configuration> -->
-<!-- 			</plugin> -->
-<!-- 		</plugins> -->
-<!-- 	</build> -->
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
@@ -116,15 +104,6 @@ which are used as well as that of the covered work.]]>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
-<!-- 	<dependencies> -->
-<!-- 		<dependency> -->
-<!-- 			<groupId>org.argeo.tp</groupId> -->
-<!-- 			<artifactId>argeo-tp-rap-e3</artifactId> -->
-<!-- 			<version>${version.argeo-tp}</version> -->
-<!-- 			<type>pom</type> -->
-<!-- 			<scope>provided</scope> -->
-<!-- 		</dependency> -->
-<!-- 	</dependencies> -->
 	<repositories>
 		<repository>
 			<id>argeo</id>
@@ -215,18 +194,7 @@ which are used as well as that of the covered work.]]>
 	<distributionManagement>
 		<site>
 			<id>staging</id>
-			<url>dav:https://forge.argeo.org/data/docs/argeo-2.1/site/argeo-suite/</url>
+			<url>file:///srv/docfactory/argeo-2.1/site/argeo-suite/</url>
 		</site>
 	</distributionManagement>
-	<profiles>
-		<profile>
-			<id>localrepo</id>
-			<distributionManagement>
-				<site>
-					<id>staging</id>
-					<url>dav:http://localhost:7080/data/docs/argeo-2.1/site/argeo-suite/</url>
-				</site>
-			</distributionManagement>
-		</profile>
-	</profiles>
 </project>
