--- a/org.argeo.suite.cms/pom.xml
+++ b/org.argeo.suite.cms/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.argeo.suite</groupId>
 		<artifactId>argeo-suite</artifactId>
-		<version>0.1.13-SNAPSHOT</version>
+		<version>2.1.13</version>
 		<relativePath>..</relativePath>
 	</parent>
 	<artifactId>org.argeo.suite.cms</artifactId>
