--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.argeo.commons</groupId>
@@ -11,7 +10,7 @@
 	<packaging>pom</packaging>
 	<name>Argeo Suite</name>
 	<description />
-	<version>0.1.13-SNAPSHOT</version>
+	<version>2.1.13</version>
 	<properties>
 		<version.argeo-suite>2.1.13</version.argeo-suite>
 		<version.argeo-connect>2.1.79</version.argeo-connect>
@@ -43,7 +42,7 @@
 		<connection>scm:git:http://git.argeo.org/gpl/argeo-suite.git</connection>
 		<url>http://git.argeo.org/?p=gpl/argeo-suite.git;a=summary</url>
 		<developerConnection>scm:git:https://code.argeo.org/git/gpl/argeo-suite.git</developerConnection>
-		<tag>HEAD</tag>
+		<tag>argeo-suite-2.1.13</tag>
 	</scm>
 	<inceptionYear>2014</inceptionYear>
 	<licenses>
@@ -168,7 +167,7 @@ which are used as well as that of the covered work.]]>
 					</reportSet>
 					<reportSet>
 						<id>javadoc</id>
-						<reports></reports>
+						<reports />
 					</reportSet>
 				</reportSets>
 			</plugin>
@@ -185,7 +184,7 @@ which are used as well as that of the covered work.]]>
 					</reportSet>
 					<reportSet>
 						<id>jxr</id>
-						<reports></reports>
+						<reports />
 					</reportSet>
 				</reportSets>
 			</plugin>
