--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	<packaging>pom</packaging>
 	<name>Argeo Suite</name>
 	<description />
-	<version>2.1.13</version>
+	<version>2.1.14-SNAPSHOT</version>
 	<properties>
 		<version.argeo-suite>2.1.13</version.argeo-suite>
 		<version.argeo-connect>2.1.79</version.argeo-connect>
@@ -42,7 +42,7 @@
 		<connection>scm:git:http://git.argeo.org/gpl/argeo-suite.git</connection>
 		<url>http://git.argeo.org/?p=gpl/argeo-suite.git;a=summary</url>
 		<developerConnection>scm:git:https://code.argeo.org/git/gpl/argeo-suite.git</developerConnection>
-		<tag>argeo-suite-2.1.13</tag>
+		<tag>HEAD</tag>
 	</scm>
 	<inceptionYear>2014</inceptionYear>
 	<licenses>
