Prepare next development cycle

--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<description />
 	<version>2.1.14-SNAPSHOT</version>
 	<properties>
-		<version.argeo-suite>2.1.13</version.argeo-suite>
+		<version.argeo-suite>2.1.14-SNAPSHOT</version.argeo-suite>
 		<version.argeo-connect>2.1.79</version.argeo-connect>
 		<version.argeo-tp-extras>2.1.10</version.argeo-tp-extras>
 		<git.rw />
