Adapt to update and changes in Argeo TP

--- a/sdk/argeo-office-e4-rap.properties
+++ b/sdk/argeo-office-e4-rap.properties
@@ -3,7 +3,8 @@ org.eclipse.equinox.http.servlet,\
 org.eclipse.equinox.http.jetty,\
 org.eclipse.equinox.metatype,\
 org.eclipse.equinox.cm,\
-org.eclipse.rap.rwt.osgi
+org.eclipse.rap.rwt.osgi,\
+org.apache.tika.parsers
 
 argeo.osgi.start.3.node=\
 org.argeo.cms
@@ -23,6 +24,8 @@ org.osgi.service.http.port=7070
 
 argeo.i18n.locales=en,fr,de,ar
 argeo.i18n.defaultLocale=en
+
+#tika.config=/home/mbaudier/dev/git/gpl/argeo-suite/sdk/exec/argeo-office-e4-rap/data/indexes/node/tika-config.xml
 
 # Logging
 log4j.configuration=file:../../log4j.properties
