--- a/sdk/log4j.properties
+++ b/sdk/log4j.properties
@@ -3,6 +3,9 @@ log4j.rootLogger=WARN, development
 
 ## Levels
 log4j.logger.org.argeo=DEBUG
+log4j.logger.org.apache.tika=DEBUG
+log4j.logger.org.apache.lucene=DEBUG
+#log4j.logger.org.apache.jackrabbit.core.query=TRACE
 
 ## Appenders
 # default appender
