--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>org.argeo.commons</groupId>
 		<artifactId>argeo-commons</artifactId>
-		<version>2.1.76-SNAPSHOT</version>
+		<version>2.1.76</version>
 	</parent>
 	<groupId>org.argeo.suite</groupId>
 	<artifactId>argeo-suite</artifactId>
@@ -13,8 +13,8 @@
 	<version>2.1.14-SNAPSHOT</version>
 	<properties>
 		<argeo.rpm.stagingRepository>/srv/rpmfactory/argeo-osgi-2-gpl/el7</argeo.rpm.stagingRepository>
-		<version.argeo-suite>2.1.14-SNAPSHOT</version.argeo-suite>
-		<version.argeo-connect>2.1.80-SNAPSHOT</version.argeo-connect>
+		<version.argeo-suite>2.1.14</version.argeo-suite>
+		<version.argeo-connect>2.1.80</version.argeo-connect>
 		<version.argeo-tp-extras>2.1.10</version.argeo-tp-extras>
 		<git.rw />
 	</properties>
