--- a/dep/org.argeo.suite.dep.e4.rcp/pom.xml
+++ b/dep/org.argeo.suite.dep.e4.rcp/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.argeo.suite</groupId>
 		<artifactId>dep</artifactId>
-		<version>2.1.14-SNAPSHOT</version>
+		<version>2.1.14</version>
 		<relativePath>..</relativePath>
 	</parent>
 	<artifactId>org.argeo.suite.dep.e4.rcp</artifactId>
@@ -15,12 +15,12 @@
 		<dependency>
 			<groupId>org.argeo.suite</groupId>
 			<artifactId>org.argeo.suite.cms</artifactId>
-			<version>2.1.14-SNAPSHOT</version>
+			<version>2.1.14</version>
 		</dependency>
 		<dependency>
 			<groupId>org.argeo.suite</groupId>
 			<artifactId>org.argeo.suite.e4</artifactId>
-			<version>2.1.14-SNAPSHOT</version>
+			<version>2.1.14</version>
 		</dependency>
 <!-- 		<dependency> -->
 <!-- 			<groupId>org.argeo.suite</groupId> -->
