--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 	<version>2.1.15-SNAPSHOT</version>
 	<properties>
 		<argeo.rpm.stagingRepository>/srv/rpmfactory/argeo-osgi-2-gpl/el7</argeo.rpm.stagingRepository>
-		<version.argeo-suite>2.1.14</version.argeo-suite>
+		<version.argeo-suite>2.1.15-SNAPSHOT</version.argeo-suite>
 		<version.argeo-connect>2.1.80</version.argeo-connect>
 		<version.argeo-tp-extras>2.1.10</version.argeo-tp-extras>
 		<git.rw />
