--- a/pom.xml
+++ b/pom.xml
@@ -1,9 +1,11 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.argeo.commons</groupId>
 		<artifactId>argeo-commons</artifactId>
-		<version>2.1.78-SNAPSHOT</version>
+		<version>2.1.80-SNAPSHOT</version>
 	</parent>
 	<groupId>org.argeo.suite</groupId>
 	<artifactId>argeo-suite</artifactId>
@@ -28,7 +30,7 @@
 		<module>org.argeo.suite.e4</module>
 		<module>org.argeo.suite.e4.rap</module>
 		<module>org.argeo.suite.standard</module>
-		
+
 		<!-- Apps -->
 		<module>org.argeo.suite.tracker</module>
 
