--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.argeo.commons</groupId>
 		<artifactId>argeo-commons</artifactId>
-		<version>2.1.81-SNAPSHOT</version>
+		<version>2.1.82</version>
 	</parent>
 	<groupId>org.argeo.suite</groupId>
 	<artifactId>argeo-suite</artifactId>
@@ -17,7 +17,7 @@
 		<argeo.rpm.stagingRepository>/srv/rpmfactory/argeo-osgi-2-gpl/el7</argeo.rpm.stagingRepository>
 		<version.argeo-suite>2.1.15-SNAPSHOT</version.argeo-suite>
 		<version.argeo-connect>2.1.81-SNAPSHOT</version.argeo-connect>
-		<version.argeo-tp-extras>2.1.10</version.argeo-tp-extras>
+		<version.argeo-tp-extras>2.1.13</version.argeo-tp-extras>
 		<git.rw />
 	</properties>
 	<modules>
