--- a/org.argeo.suite.tracker/pom.xml
+++ b/org.argeo.suite.tracker/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<groupId>org.argeo.suite</groupId>
 		<artifactId>argeo-suite</artifactId>
-		<version>2.1.15</version>
+		<version>2.1.16-SNAPSHOT</version>
 		<relativePath>..</relativePath>
 	</parent>
 	<artifactId>org.argeo.suite.tracker</artifactId>
@@ -14,7 +14,7 @@
 		<dependency>
 			<groupId>org.argeo.suite</groupId>
 			<artifactId>org.argeo.suite.e4</artifactId>
-			<version>2.1.15</version>
+			<version>2.1.16-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 </project>
