--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	<packaging>pom</packaging>
 	<name>Argeo Suite</name>
 	<description />
-	<version>2.1.15</version>
+	<version>2.1.16-SNAPSHOT</version>
 	<properties>
 		<argeo.rpm.stagingRepository>/srv/rpmfactory/argeo-osgi-2-gpl/el7</argeo.rpm.stagingRepository>
 		<version.argeo-suite>2.1.15</version.argeo-suite>
@@ -35,7 +35,7 @@
 		<connection>scm:git:http://git.argeo.org/gpl/argeo-suite.git</connection>
 		<url>http://git.argeo.org/?p=gpl/argeo-suite.git;a=summary</url>
 		<developerConnection>scm:git:https://code.argeo.org/git/gpl/argeo-suite.git</developerConnection>
-		<tag>argeo-suite-2.1.15</tag>
+		<tag>HEAD</tag>
 	</scm>
 	<inceptionYear>2014</inceptionYear>
 	<licenses>
