--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<parent>
 		<groupId>org.argeo.commons</groupId>
 		<artifactId>argeo-commons</artifactId>
-		<version>2.1.82</version>
+		<version>2.1.83-SNAPSHOT</version>
 	</parent>
 	<groupId>org.argeo.suite</groupId>
 	<artifactId>argeo-suite</artifactId>
@@ -14,7 +14,7 @@
 	<properties>
 		<argeo.rpm.stagingRepository>/srv/rpmfactory/argeo-osgi-2-gpl/el7</argeo.rpm.stagingRepository>
 		<version.argeo-suite>2.1.16-SNAPSHOT</version.argeo-suite>
-		<version.argeo-connect>2.1.81</version.argeo-connect>
+		<version.argeo-connect>2.1.82-SNAPSHOT</version.argeo-connect>
 		<version.argeo-tp-extras>2.1.13</version.argeo-tp-extras>
 		<git.rw />
 	</properties>
