--- a/org.argeo.suite.e4/build.properties
+++ b/org.argeo.suite.e4/build.properties
@@ -5,5 +5,6 @@ bin.includes = META-INF/,\
                e4xmi/,\
                plugin.xml,\
                e4xmi/argeo-suite-toolbars.e4xmi,\
-               OSGI-INF/resourcesE4Service.xml
+               OSGI-INF/resourcesE4Service.xml,\
+               e4xmi/argeo-settings.e4xmi
 source.. = src/
