--- a/sdk/argeo-office-e4-rap.properties
+++ b/sdk/argeo-office-e4-rap.properties
@@ -21,6 +21,8 @@ org.osgi.service.http.port=7070
 
 #argeo.node.useradmin.uris=ldap://cn=Directory%20Manager:argeoargeo@localhost:10389/dc=example,dc=com
 
+rgeo.node.init=../../init
+
 argeo.i18n.locales=en,fr,de,ar
 argeo.i18n.defaultLocale=en
 
