Development log levels for files.

--- a/sdk/log4j.properties
+++ b/sdk/log4j.properties
@@ -3,9 +3,12 @@ log4j.rootLogger=WARN, development
 
 ## Levels
 log4j.logger.org.argeo=DEBUG
-log4j.logger.org.apache.tika=DEBUG
-log4j.logger.org.apache.lucene=DEBUG
-#log4j.logger.org.apache.jackrabbit.core.query=TRACE
+#log4j.logger.org.argeo.cms.internal.kernel.CmsWorkspaceIndexer=TRACE
+#log4j.logger.org.apache.tika=DEBUG
+#log4j.logger.org.apache.lucene=DEBUG
+#log4j.logger.org.apache.jackrabbit.core=DEBUG
+#log4j.logger.org.apache.jackrabbit.core.session=DEBUG
+#log4j.logger.org.apache.jackrabbit.core.observation=DEBUG
 
 ## Appenders
 # default appender
