--- a/sdk/argeo-office-e4-rap.properties
+++ b/sdk/argeo-office-e4-rap.properties
@@ -2,7 +2,9 @@ argeo.osgi.start.2.node=\
 org.eclipse.equinox.http.servlet,\
 org.eclipse.equinox.metatype,\
 org.eclipse.equinox.cm,\
-org.eclipse.rap.rwt.osgi,\
+org.eclipse.rap.rwt.osgi
+
+argeo.osgi.start.2.suite=\
 org.apache.tika.parsers
 
 argeo.osgi.start.3.node=\
