Adapt to changes in Argeo Platform and introduce Argeo Suite Lib.

--- a/lib/pom.xml
+++ b/lib/pom.xml
@@ -1,4 +1,6 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.argeo.maven</groupId>
@@ -6,13 +8,12 @@
 		<version>2.1.2</version>
 	</parent>
 	<groupId>org.argeo.suite</groupId>
-	<artifactId>argeo-suite</artifactId>
+	<artifactId>argeo-suite-lib</artifactId>
 	<packaging>pom</packaging>
-	<name>Argeo Suite</name>
+	<name>Parent POM for Argeo Suite Extensions</name>
 	<description />
 	<version>2.1.16-SNAPSHOT</version>
 	<properties>
-		<version.argeo-suite>2.1.16-SNAPSHOT</version.argeo-suite>
 		<!-- Dependencies -->
 		<version.argeo-tp>2.1.27</version.argeo-tp>
 		<version.argeo-tp-extras>2.1.13</version.argeo-tp-extras>
@@ -23,81 +24,16 @@
 		<argeo.rpm.stagingRepository>/srv/rpmfactory/argeo-osgi-2-gpl/el7</argeo.rpm.stagingRepository>
 		<git.rw />
 	</properties>
-	<modules>
-		<!-- Eclipse 4 -->
-		<module>org.argeo.suite.cms</module>
-		<module>org.argeo.suite.e4</module>
-		<module>org.argeo.suite.e4.rap</module>
-		<module>org.argeo.suite.standard</module>
-
-		<!-- Apps -->
-		<module>library</module>
-		<module>systems</module>
-		<module>org.argeo.suite.tracker</module>
-
-		<module>dep</module>
-		<module>dist</module>
-		<module>lib</module>
-	</modules>
-	<scm>
-		<connection>scm:git:http://git.argeo.org/gpl/argeo-suite.git</connection>
-		<url>http://git.argeo.org/?p=gpl/argeo-suite.git;a=summary</url>
-		<developerConnection>scm:git:https://code.argeo.org/git/gpl/argeo-suite.git</developerConnection>
-		<tag>HEAD</tag>
-	</scm>
-	<inceptionYear>2014</inceptionYear>
-	<licenses>
-		<license>
-			<name>GPL v3 with exception</name>
-			<url>http://www.gnu.org/licenses/gpl-3.0.txt</url>
-			<distribution>repo</distribution>
-			<comments><![CDATA[
-Smart Data Productivity Suite - Lean, robust and secured distributed Java applications
-Copyright (C) 2017 Argeo GmbH
-
-This program is free software: you can redistribute it and/or modify
-it under the terms of the GNU General Public License as published by
-the Free Software Foundation, either version 3 of the License, or
-(at your option) any later version.
-
-This program is distributed in the hope that it will be useful,
-but WITHOUT ANY WARRANTY; without even the implied warranty of
-MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-GNU General Public License for more details.
-
-You should have received a copy of the GNU General Public License
-along with this program.  If not, see <http://www.gnu.org/licenses />
-
-Additional permission under GNU GPL version 3 section 7
-
-If you modify this Program, or any covered work, by linking or combining it 
-with software covered by the terms of the Eclipse Public License, the 
-licensors of this Program grant you additional permission to convey the 
-resulting work. Corresponding Source for a non-source form of such a 
-combination shall include the source code for the parts of such software 
-which are used as well as that of the covered work.]]>
-			</comments>
-		</license>
-	</licenses>
-	<developers>
-		<developer>
-			<id>mbaudier</id>
-			<name>Mathieu Baudier</name>
-			<email><![CDATA[http://mailhide.recaptcha.net/d?k=01EM7GpnvY3k8woQ2tnnZLUA==&c=crsNpHjhOBDPswHG6HD_gXaqymhC69wmBf7wlagcSHw=]]></email>
-			<organization>Argeo</organization>
-			<organizationUrl>http://www.argeo.org</organizationUrl>
-			<roles>
-				<role>architect</role>
-				<role>developer</role>
-				<role>QA</role>
-			</roles>
-		</developer>
-	</developers>
 	<dependencies>
 		<dependency>
-			<groupId>org.argeo.tp</groupId>
-			<artifactId>argeo-tp</artifactId>
-			<version>${version.argeo-tp}</version>
+			<groupId>org.argeo.tp.equinox</groupId>
+			<artifactId>org.eclipse.osgi</artifactId>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.argeo.suite</groupId>
+			<artifactId>org.argeo.suite.dep.e4.rap</artifactId>
+			<version>2.1.16-SNAPSHOT</version>
 			<scope>provided</scope>
 			<exclusions>
 				<exclusion>
@@ -228,10 +164,4 @@ which are used as well as that of the covered work.]]>
 			</plugin>
 		</plugins>
 	</reporting>
-	<distributionManagement>
-		<site>
-			<id>staging</id>
-			<url>file:///srv/docfactory/argeo-2.1/site/argeo-suite/</url>
-		</site>
-	</distributionManagement>
 </project>
